# FBugReporter

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
client/: .gitignore  Cargo.toml  theme.ini
client/src/: main.rs  theme.rs
client/src/io/: config_manager.rs  log_manager.rs
client/src/layouts/: change_password_layout.rs  connect_layout.rs  main_layout.rs  mod.rs  otp_layout.rs  report_layout.rs  settings_layout.rs
client/src/misc/: app_error.rs  custom_data_button_controller.rs  mod.rs  report_attachment_button.rs  report_id_button.rs  theme.rs
client/src/network/: mod.rs  net_service.rs
client/src/services/: config_service.rs  logger_service.rs  mod.rs  net_packets.rs  net_service.rs
client/src/widgets/: report.rs
example/: .gitignore  MainScene.gd  MainScene.tscn  README.md  export_presets.cfg  icon.svg.import  project.godot
example/.godot/: extension_list.cfg
example/extensions/: FBugReporter.gdextension
example/lib/: reporter.gdnlib  reporter.gdns
example/scenes/: reporter.gd  reporter.tscn
install/install_client/: go.mod  install_client.go
install/install_reporter/: go.mod  go.sum  install_reporter.go
install/install_server/: go.mod  go.sum  install_server.go
reporter/: Cargo.toml
reporter/src/: global_params.rs  lib.rs  listener_service.rs  log_manager.rs  logger_service.rs  main.rs  misc.rs  net_packets.rs  reporter_service.rs
reporter/src/report_receiver/: mod.rs  report_receiver_server.rs
reporter_connector/: main.cpp
reporter_connectors/: main.cpp
server/: .gitignore  Cargo.toml
server/database_manager/: .gitignore  Cargo.toml  build.rs
server/database_manager/src/: main.rs
server/monitor/: .gitignore  Cargo.toml
server/monitor/src/: main.rs
server/server/: .gitignore  Cargo.toml
server/server/src/: main.rs  misc.rs
server/server/src/io/: config_manager.rs  log_manager.rs  mod.rs
server/server/src/network/: ban_manager.rs  client_service.rs  mod.rs  net_service.rs  reporter_service.rs  user_service.rs
server/server/src/services/: config_service.rs  logger_service.rs  mod.rs
server/server/src/services/io/: logger_service.rs  mod.rs
server/server/src/services/network/: ban_manager.rs  net_packets.rs  net_service.rs  user_service.rs
server/server_monitor/: Cargo.toml
server/server_monitor/src/: main.rs
server/shared/src/: db_manager.rs  error.rs  lib.rs  report.rs
server/sqlite3-windows/: sqlite3.lib  version.txt
server/src/: global_params.rs  main.rs  misc.rs
server/src/services/: config_service.rs  db_manager.rs  logger_service.rs  mod.rs  net_service.rs
server/src/services/network/: ban_manager.rs  mod.rs  net_packets.rs  net_service.rs  user_service.rs
shared/: Cargo.toml
shared/src/: client_packets.rs  db_manager.rs  lib.rs  net_params.rs  reporter_packets.rs
shared/src/misc/: db_manager.rs  error.rs  mod.rs  report.rs
shared/src/network/: client_messages.rs  messaging.rs  mod.rs  net_params.rs  reporter_messages.rs  reporter_packets.rs
