[package]
name = "client"
authors = ["Aleksandr Tretyakov"]
version = "1.0.1"
edition = "2021"
license = "MIT"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
rdev = "0.5.1"
configparser = "3.0.0"
opener = "0.5.0"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["alloc"]}
rand = "0.8.5"
num-bigint = {version = "0.4.3", features = ["serde", "rand"]}
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
cmac = "0.7.1"
chrono = "0.4.19"
sha2 = "0.10.2"
image = "0.24.2"
base64 = "0.13.0"
native-dialog = {version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"]}
shared = {path = "../shared"}

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"
