[package]
name = "client"
authors = ["Aleksandr Tretyakov"]
version = "1.2.0"
edition = "2021"
license = "MIT"

[dependencies]
druid = "0.8.3"
rdev = "0.5.2"
configparser = "3.0.2"
opener = "0.6.1"
serde = {version = "1.0.163", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.24"
sha2 = "0.10.6"
image = "0.24.6"
base64 = "0.21.0"
native-dialog = {version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"]}
shared = {path = "../shared"}

[target.'cfg(any(windows, unix))'.dependencies]
platform-dirs = "0.3.0"
