[package]
name = "reporter"
authors = ["Aleksandr Tretyakov"]
version = "1.0.1"
edition = "2021"
license = "MIT"

[dependencies]
gdnative = "0.10.0"
rand = "0.8.5"
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.19"
os_info = "3.4.0"
backtrace = "0.3.65"
shared = {path = "../shared"}

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"
