[package]
name = "reporter"
authors = ["Aleksandr Tretyakov"]
version = "1.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gdnative = "0.10.0"
rand = "0.8.5"
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.19"
os_info = "3.4.0"
shared = {path = "../shared"}
backtrace = "0.3.66"
image = "0.24.3"

[lib]
crate-type = ["cdylib"]

[target.'cfg(any(windows, unix))'.dependencies]
platform-dirs = "0.3.0"
