[package]
name = "reporter"
authors = ["Aleksandr Tretyakov"]
version = "1.2.0"
edition = "2021"
license = "MIT"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "8990464" }
rand = "0.8.5"
serde = {version = "1.0.163", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.24"
os_info = "3.7.0"
backtrace = "0.3.67"
image = "0.24.6"
shared = {path = "../shared"}

[lib]
crate-type = ["cdylib"]

[target.'cfg(any(windows, unix))'.dependencies]
platform-dirs = "0.3.0"
