[package]
name = "server"
authors = ["Aleksandr \"Flone\" Tretyakov"]
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
aes = "0.7.4"
block-modes = "0.8.1"
rand = "0.8.3"
num-bigint = {version = "0.4.2", features = ["serde", "rand"]}
serde = {version = "1.0.130", features = ["derive"]}
bincode = "1.3.3"
cmac = "0.6.0"
chrono = "0.4.19"
os_info = "3.0.7"
rusqlite = "0.26.3"
sha2 = "0.10.1"
configparser = "3.0.0"
totp-rs = "0.7.4"

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"