[package]
name = "shared"
authors = ["Aleksandr Tretyakov"]
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite = "0.26.3"
sha2 = "0.10.1"
chrono = "0.4.19"
rand = "0.8.3"
num-bigint = {version = "0.4.3", features = ["serde", "rand"]}
serde = {version = "1.0.130", features = ["derive"]}
bincode = "1.3.3"
os_info = "3.0.7"
cmac = "0.7.1"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["alloc"]}