[package]
name = "shared"
authors = ["Aleksandr Tretyakov"]
version = "1.2.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite = "0.29.0"
sha2 = "0.10.6"
chrono = "0.4.24"
rand = "0.8.5"
num-bigint = {version = "0.4.3", features = ["serde", "rand"]}
serde = {version = "1.0.163", features = ["derive"]}
bincode = "1.3.3"
os_info = "3.7.0"
cmac = "0.7.2"
aes = "0.8.2"
cbc = {version = "0.1.2", features = ["alloc"]}
backtrace = "0.3.67"
sysinfo = "0.29.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[target.'cfg(any(windows,unix))'.dependencies]
platform-dirs = "0.3.0"

[features]
database = []
