[package]
name = "server"
authors = ["Aleksandr Tretyakov"]
version = "1.0.1"
edition = "2021"
license = "MIT"

[dependencies]
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["alloc"]}
rand = "0.8.5"
num-bigint = {version = "0.4.3", features = ["serde", "rand"]}
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
cmac = "0.7.1"
chrono = "0.4.19"
os_info = "3.4.0"
rusqlite = "0.26.3"
sha2 = "0.10.2"
configparser = "3.0.0"
totp-rs = {version = "2.0.0", features = ["qr"]}
shared = {path = "../shared"}

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"
