[package]
name = "server"
authors = ["Aleksandr Tretyakov"]
version = "1.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.22"
sha2 = "0.10.2"
configparser = "3.0.0"
totp-rs = {version = "2.0.0", features = ["qr"]}
shared = {path = "../../shared", features = ["database"]}

[target.'cfg(any(windows,unix))'.dependencies]
platform-dirs = "0.3.0"
